# sunday-generator

./: .devcontainer.json  .editorconfig  .gitignore  AGENTS.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.sonarlint/: connectedMode.json
1.0.0-SNAPSHOT/: sunday.raml
1.1.0/: index.html
1.1.0-alpha.10/: navigation.html
1.1.0-alpha.14/: index.html
1.1.0-alpha.15/: navigation.html
1.1.0-alpha.17/: sunday.raml
1.1.0-alpha.23/: sunday.raml
1.1.0-alpha.24/: navigation.html  sunday.raml
1.1.0-alpha.25/: navigation.html
1.1.0-alpha.5/: -modules.html
1.1.0-beta.1/: navigation.html
1.1.0-beta.10/: index.html
1.1.0-beta.11/: index.html
1.1.0-beta.12/: index.html
1.1.0-beta.13/: index.html
1.1.0-beta.14/: index.html
1.1.0-beta.15/: index.html
1.1.0-beta.16/: index.html
1.1.0-beta.17/: index.html
1.1.0-beta.18/: index.html
1.1.0-beta.19/: index.html
1.1.0-beta.2/: index.html
1.1.0-beta.20/: index.html  navigation.html
1.1.0-beta.21/: index.html
1.1.0-beta.22/: index.html  navigation.html
1.1.0-beta.23/: index.html
1.1.0-beta.24/: index.html  package-list
1.1.0-beta.3/: index.html
1.1.0-beta.5/: index.html
1.1.0-beta.6/: index.html  sunday.raml
1.1.0-beta.7/: index.html
1.1.0-beta.8/: index.html
1.1.0-beta.9/: index.html
1.2.0/: index.html  navigation.html
1.2.1/: index.html  navigation.html
1.2.2/: index.html
1.2.3/: index.html
1.2.4/: index.html  sunday
1.3.0/: index.html  sunday
1.3.1/: index.html  sunday
generator/src/test/resources/python/compile/: pyproject.toml
(+50380 files in other folders)
